Sat Oct 16 11:10:55 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_encoding2cp): set codepage 20936
	  according to GB2312. [Bug #3937] [ruby-core:32758]

Fri Oct 15 23:36:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (NUM2DEVT, DEVT2NUM, PRI_DEVT_PREFIX): fallback to
	  unsigned int.

Fri Oct 15 20:30:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (dev_t): use RUBY_REPLACE_TYPE.

	* file.c (rb_stat_inspect): use PRI_DEVT_PREFIX.

Thu Oct 14 07:35:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (DEVT2NUM): added. Size of dev_t is depend on the
	  environment even if POSIX defines dev_t as unsigned integer.
	  For example, OpenVMS, 64bit Solaris 9, and NetBSD 6 defines
	  dev_t as 64bit unsigned integer.

	* file.c (rb_stat_dev): use DEVT2NUM.

	* file.c (rb_stat_dev_major): dev_t is not long. major(3)'s return
	  value is int.

	* file.c (rb_stat_dev_minor): dev_t is not long. minor(3)'s return
	  value is int.

	* configure.in: check size of dev_t.

Thu Oct 14 20:50:51 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_val): expand environment in 
	  the pathname. [Bug #3907]

Thu Oct 14 04:16:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (ruby_float_step): fix Numeric#step with infinity unit
	  doesn't works well. [ruby-core:32779]

Wed Oct 13 22:32:34 2010  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI::unescape): bugfix to unescape the multibyte
	  string. Thanks nobu and tDiary dev members. [Bug #3909]

Tue Oct 12 23:58:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_open_osfhandle, rb_w32_wopen, rb_w32_pipe):
	  use uintptr_t instead of long for win64.

Tue Oct 12 23:55:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vsnprintf.c (BSD_vfprintf): fix cast.

Tue Oct 12 18:25:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_ungetc): always see Bignum. On 32bit valid value